Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27232

[PATCH] Fixing cygwin qmake build.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 4.8.2
    • Build tools: qmake
    • None
    • Cygwin CROSS_COMPILE=*-w64-mingw32-g++.
    • 8ca1c93a15b03c8bcba56bfa203e973fcb185c10

    Description

      Without '#define QT_OPEN_LARGEFILE' qmake compile end with "qtemporaryfile.cpp:197:57: error: ‘QT_OPEN_LARGEFILE’ was not declared in this scope".

      Thanks!

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            john peterson John Peterson
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes