define QT_OPEN_LARGEFILE

it must be defined, even if zero

Task-number: QTBUG-27232
Change-Id: I950ef61ede197af9c2d8aedddd712cc6d4cc745b
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 8ca1c93a15b03c8bcba56bfa203e973fcb185c10 https://github.com/qt/qtbase/commit/8ca1c93a15b03c8bcba56bfa203e973fcb185c10